# SnippetTestBuilder

./: .gitignore  README.md  SnippetRelationshipDiagram.drawio  index.html  more_output.txt  package-lock.json  package.json  todo.txt  tsconfig.json
python_api/: init.py  snippet_runner.py
runnables/: snippet_runner.py
src-tauri/: .taurignore  Cargo.toml  DELETE_ME.py  output.txt  output_runables.snippets.root.main.math.mul.app.txt  output_runables.snippets.root.main.params.num_param.app.txt  output_runables.snippets.root.main.params.str_param.app.txt  output_runables.snippets.root.main.write_to_file.app.txt  pyproject.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/runables/: snippet_runner.py
src-tauri/runables/snippets/root/main/basic_one_snippet/: app.py  input_numbers_schema.yaml
src-tauri/runables/snippets/root/main/math/add/: app.py
src-tauri/runables/snippets/root/main/params/float param/: app.py
src-tauri/runables/snippets/root/main/params/num_param/: app.py
src-tauri/runables/snippets/root/main/params/str_param/: app.py
src-tauri/runables/snippets/root/main/string_operations/get_path/: app.py
src-tauri/runables/snippets/root/main/string_operations/remove_index_in_str/: app.py
src-tauri/runables/snippets/root/main/write_to_file/: app.py
src-tauri/src/: core_components.rs  core_services.rs  main.rs  python_libraries.rs  state_management.rs  tauri_services.rs  utils.rs
src-tauri/src/core_components/: front_snippet_component_manager.rs  snippet.rs  snippet_manager.rs
src-tauri/src/core_services/: concurrent_processes.rs  directory_manager.rs  front_directory_component_manager.rs  installation_manager.rs  io_service.rs  project_service.rs  python_service.rs  python_service_DELETE.rs  runtime_logging_service.rs  schema_validator.rs  visual_directory_component_manager.rs  visual_workspace_component_manager.rs  workspace_manager.rs
src-tauri/src/lib/: lib.rs  python_module.rs
src-tauri/src/python_libraries/: lib.rs  python_build_module.rs  python_module.rs  python_run_module.rs
src-tauri/src/runables/: snippet_creator.py  snippet_runner.py
src-tauri/src/runables/runables/: snippet_runner.py
src-tauri/src/runables/runables/snippets/root/main/math/subtract/: app.py
src-tauri/src/runables/snippets/root/main/math/add/: app.py
src-tauri/src/runables/snippets/root/main/math/multiply/: app.py
src-tauri/src/runables/snippets/root/main/math/subtract/: app.py
src-tauri/src/runables/snippets/root/main/params/float param/: app.py
src-tauri/src/runables/snippets/root/main/params/str_param/: app.py
src-tauri/src/runables/snippets/root/main/write to file/: app.py
src-tauri/src/state_management/: external_snippet_manager.rs  visual_snippet_component_manager.rs  window_manager.rs
src-tauri/src/state_management/window_manager/: visual_component_manager.rs
src-tauri/src/tauri_services/: directory_tauri_service.rs  project_tauri_service.rs  snippet_tauri_service.rs  window_session_tauri_service.rs
src-tauri/src/utils/: sequential_id_generator.rs
src-tauri/tests/testing_files/sample_directory/data/snippets/root/main/basic_one_snippet/: app.py  testing_schema.yaml
(+43 files in other folders)
