[lib]
name = "snippet_python_module"
version = "0.0.0"
path = "src/lib/lib.rs"
crate-type = ["cdylib", "rlib"]

[package]
name = "snippet_test_builder_desktop"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bimap = "0.6.3" 
pyo3 = "0.21.2"
pathdiff = "0.2.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[registries.creates-io]
protocol = "sparse"