[package]
name = "SnippetTestBuilder"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["fs-all", "http-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bimap = "0.6.3"
pyo3 = { version = "0.22.2", features = ["gil-refs", "auto-initialize"] }
pyo3-build-config = "0.22.2"
enum-as-inner = "0.6.0"
petgraph = "0.6.5"
pathdiff = "0.2.1"
strum = "0.26.3"
strum_macros = "0.26.4"
directories = "5.0.1"
zip = "2.2.0"
reqwest = "0.12.7"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[registries.creates-io]
protocol = "sparse"
